# VSSS-INF

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  build.sh  buildVSSS.sh  dockerfile  doxygenconfig  run.sh  vsinf
cmake/: DependencieResolution.cmake  P137MinDepVersions.cmake  PreventSourceFolderCorruption.cmake
config/: formation.txt  quicksave.txt
docs/: README.en.md  README.md
doxygen/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md_source.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md_source.html  _r_e_a_d_m_e_8en_8md.html  _r_e_a_d_m_e_8en_8md_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  camcap_8cpp.html  camcap_8cpp__incl.dot  camcap_8cpp__incl.md5  camcap_8cpp_source.html  camcap_8hpp.html  camcap_8hpp__dep__incl.dot  camcap_8hpp__dep__incl.md5  camcap_8hpp__incl.dot  camcap_8hpp__incl.md5  camcap_8hpp_source.html  class_b1.html  class_b1__inherit__graph.dot  class_b1__inherit__graph.md5  class_c_p_u_timer.html  class_c_p_u_timer__coll__graph.dot  class_c_p_u_timer__coll__graph.md5  class_c_p_u_timer_a3403f8cce7b7518e47a1826b8650220c_icgraph.dot  class_c_p_u_timer_a3403f8cce7b7518e47a1826b8650220c_icgraph.md5  class_c_p_u_timer_a363d9ba80f897fe24914cce080bf3b52_icgraph.dot  class_c_p_u_timer_a363d9ba80f897fe24914cce080bf3b52_icgraph.md5  class_c_p_u_timer_a57da0f833904f3ddf20a640e0f8fe127_icgraph.dot  class_c_p_u_timer_a57da0f833904f3ddf20a640e0f8fe127_icgraph.md5  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_cgraph.dot  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_cgraph.md5  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_icgraph.dot  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_icgraph.md5  class_c_p_u_timer_a9547512dbcec01ea685d291569a87aa4_icgraph.dot  (+2519 more)
doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  (+139 more)
doxygen/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.tex  _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _r_e_a_d_m_e_8en_8md.tex  _r_e_a_d_m_e_8md.tex  annotated.tex  camcap_8cpp.tex  camcap_8cpp__incl.dot  camcap_8cpp__incl.md5  camcap_8hpp.tex  camcap_8hpp__dep__incl.dot  camcap_8hpp__dep__incl.md5  camcap_8hpp__incl.dot  camcap_8hpp__incl.md5  class_b1.tex  class_b1__inherit__graph.dot  class_b1__inherit__graph.md5  class_c_p_u_timer.tex  class_c_p_u_timer__coll__graph.dot  class_c_p_u_timer__coll__graph.md5  class_c_p_u_timer_a3403f8cce7b7518e47a1826b8650220c_icgraph.dot  class_c_p_u_timer_a3403f8cce7b7518e47a1826b8650220c_icgraph.md5  class_c_p_u_timer_a363d9ba80f897fe24914cce080bf3b52_icgraph.dot  class_c_p_u_timer_a363d9ba80f897fe24914cce080bf3b52_icgraph.md5  class_c_p_u_timer_a57da0f833904f3ddf20a640e0f8fe127_icgraph.dot  class_c_p_u_timer_a57da0f833904f3ddf20a640e0f8fe127_icgraph.md5  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_cgraph.dot  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_cgraph.md5  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_icgraph.dot  class_c_p_u_timer_a8712b4f64c79a210e91bbb72ed55bfc1_icgraph.md5  class_c_p_u_timer_a9547512dbcec01ea685d291569a87aa4_icgraph.dot  class_c_p_u_timer_a9547512dbcec01ea685d291569a87aa4_icgraph.md5  class_c_p_u_timer_a98f96656fd5e6676064ac6e5f3c7621b_icgraph.dot  class_c_p_u_timer_a98f96656fd5e6676064ac6e5f3c7621b_icgraph.md5  class_c_p_u_timer_aa8736023dbfa50166f8e49960ad84a84_icgraph.dot  class_c_p_u_timer_aa8736023dbfa50166f8e49960ad84a84_icgraph.md5  class_c_p_u_timer_ab11c8b37836afcacfc60341cfa6f21b3_cgraph.dot  class_c_p_u_timer_ab11c8b37836afcacfc60341cfa6f21b3_cgraph.md5  class_c_p_u_timer_ae9c1b873923f73091dae7e5a6051baf6_icgraph.dot  (+2167 more)
scripts/: cudaSupport.sh  dependencies.sh  opencvInstall.sh  preDepResolution.sh
src/: .fuse_hidden00004fc700000004  .fuse_hidden0000582b00000003  .fuse_hidden0000584600000005  .fuse_hidden00005b240000000b  .fuse_hidden000063b40000001c  camcap.cpp  camcap.hpp  constants.hpp  cpuTimer.cpp  cpuTimer.h  cpuTimer.hpp  kalmanFilter.cpp  kalmanFilter.hpp  ls.cpp  ls.h  main.cpp  manager.cpp  manager.hpp  robot.hpp  robots.cpp  robots.hpp  serialW.cpp  serialW.hpp  strategy.cpp  strategy.hpp  stringtodouble.hpp
src/aux/: cpuTimer.cpp  debug.hpp  dialog.cpp  dialog.hpp  equations.hpp  jsonSaveManager.cpp  jsonSaveManager.h  ls.cpp  ls.hpp
src/capture/: v4lcap.cpp  v4lcap.hpp  v4ldev.cpp  v4ldev.hpp
src/communication/: flyingMessenger.cpp  flyingMessenger.hpp  serialCom.cpp  serialCom.hpp
src/fuzzy/: fuzzyController.cpp  fuzzyController.hpp  fuzzyFunction.cpp  rules.cpp  rules.hpp
src/gui/: controlGUI.cpp  controlGUI.hpp  filechooser.cpp  filechooser.hpp  imageView.cpp  imageView.hpp  robotGUI.cpp  robotGUI.hpp  strategyGUI.cpp  strategyGUI.hpp  testFrame.cpp  testFrame.hpp  v4linterface.cpp  v4linterface.hpp  v4linterfaceEvents.cpp  visionGUI.cpp  visionGUI.hpp
src/vision/: gmm.cpp  gmm.hpp  tag.cpp  tag.hpp  vision.cpp  vision.hpp
